[gd_scene load_steps=10 format=3 uid="uid://cy78p0fc6gld8"]

[ext_resource type="Script" path="res://src/delivery/delivery_zones/delivery_zone.gd" id="1_blhq6"]
[ext_resource type="Texture2D" uid="uid://brvpjm2vab1l2" path="res://src/delivery/delivery_zones/sprites/zone.png" id="2_fgo31"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iec35"]
size = Vector2(96, 64)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqbk2"]

[sub_resource type="Animation" id="Animation_uwchm"]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_mh05i"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1.03526, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ld1ew"]
resource_name = "glow"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate:v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.7, 1, 1.3),
"transitions": PackedFloat32Array(1.55, 0.435, 1, 1, 0.435, 1.55),
"update": 0,
"values": [0.71, 0.85, 1.0, 1.0, 0.85, 0.71]
}

[sub_resource type="Animation" id="Animation_7cble"]
resource_name = "hidden"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_egycc"]
_data = {
"fade_in": SubResource("Animation_uwchm"),
"fade_out": SubResource("Animation_mh05i"),
"glow": SubResource("Animation_ld1ew"),
"hidden": SubResource("Animation_7cble")
}

[node name="DeliveryZone" type="Node2D"]
script = ExtResource("1_blhq6")

[node name="Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
visible = false
shape = SubResource("RectangleShape2D_iec35")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0.00784314, 0.854902, 0.533333, 1)
texture = ExtResource("2_fgo31")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "DeliveryZone/hidden"
libraries = {
"": SubResource("AnimationLibrary_sqbk2"),
"DeliveryZone": SubResource("AnimationLibrary_egycc")
}

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
